added SBL, BLR codes

--- a/GQ1D_LUvsCC_test/GQ1D_LUvsCC_3.ipynb
+++ b/GQ1D_LUvsCC_test/GQ1D_LUvsCC_3.ipynb
@@ -6,8 +6,14 @@
    "source": [
     "### Description: Test the performance of Gauss-Legendre vs Clenshaw-Curtis quadrature in computing the following integral:\n",
     "$$  \\int_{-1}^1 |x|^3 = 0.50 $$\n",
-    "#### Author: Rimple Sandhu, Carleton University; Email: rimple_sandhu@outlook.com\n",
     "#### Additional packages required: [UQTk](www.sandia.gov)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Author: Rimple Sandhu, Carleton University; Email: rimple_sandhu@outlook.com"
    ]
   },
   {
