--- a/GQMD_numPoints/GQMD_numpoints.ipynb
+++ b/GQMD_numPoints/GQMD_numpoints.ipynb
@@ -5,13 +5,19 @@
    "metadata": {},
    "source": [
     "### Description: Computes number of points for multiple level/dimension of given quadrature type and sparsity \n",
-    "#### Author: Rimple Sandhu, Carleton University; Email: rimple_sandhu@outlook.com\n",
     "#### Additional packages required: [UQTk](www.sandia.gov)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Author: Rimple Sandhu, Carleton University; Email: rimple_sandhu@outlook.com"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
