Completed the sparse learning poly text

--- a/Basics/Logevid_To_Postprob.ipynb
+++ b/Basics/Logevid_To_Postprob.ipynb
@@ -31,22 +31,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6652409557748219\n",
-      "0.2447284710547976\n",
-      "0.09003057317038045\n"
+      "2.075035936249612e-55\n",
+      "0.02209947022499789\n",
+      "26.783830276426517\n",
+      "32.71384417372118\n",
+      "24.235011832435138\n",
+      "16.245214247192177\n"
      ]
     }
    ],
    "source": [
-    "logevid = [-12,-13,-14]\n",
-    "postprob = exp(logevid)/sum(exp(logevid))\n",
+    "logevid = [-116.8,5.3,12.4,12.6,12.3,11.9]\n",
+    "postprob = 100*exp(logevid)/sum(exp(logevid))\n",
+    "print(*postprob,sep='\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.6448551787859596e-52\n",
+      "2.0063551280661645\n",
+      "89.68645073876583\n",
+      "7.002867491413187\n",
+      "0.7995707217119252\n",
+      "0.504755920042908\n"
+     ]
+    }
+   ],
+   "source": [
+    "logevid = [-119.4,-0.7,3.10,0.55,-1.62,-2.08]\n",
+    "postprob = 100*exp(logevid)/sum(exp(logevid))\n",
+    "print(*postprob,sep='\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.916745596670921e-49\n",
+      "40.79630637764185\n",
+      "59.062224893322245\n",
+      "0.14066016815273572\n",
+      "0.0005748459577361532\n",
+      "0.000233714925440047\n"
+     ]
+    }
+   ],
+   "source": [
+    "logevid = [-122.8,-7.63,-7.26,-13.3,-18.8,-19.7]\n",
+    "postprob = 100*exp(logevid)/sum(exp(logevid))\n",
     "print(*postprob,sep='\\n')"
    ]
   },
